MDEV-5612 - my_rename() deletes files when it shouldn't

Ported fix for MySQL BUG#51861.